@@ -43,7 +43,7 @@ class ResponseDescription(object):
         self.response = response
 
     def msg(self):
-        return _('transition_label_default', 'Response added')
+        return _('transition_label_default', u'Response added')
 
     @property
     def _msg_mapping(self):
@@ -58,7 +58,7 @@ class Reactivate(ResponseDescription):
     css_class = 'reactivate'
 
     def msg(self):
-        return _('transition_label_reactivate', 'Reactivate by ${user}',
+        return _('transition_label_reactivate', u'Reactivate by ${user}',
                  mapping=self._msg_mapping)
 
 ResponseDescription.add_description(Reactivate)
@@ -69,7 +69,7 @@ class Reject(ResponseDescription):
     css_class = 'refuse'
 
     def msg(self):
-        return _('transition_label_reject', 'Rejected by ${user}',
+        return _('transition_label_reject', u'Rejected by ${user}',
                  mapping=self._msg_mapping)
 
 ResponseDescription.add_description(Reject)
@@ -82,7 +82,7 @@ class Resolve(ResponseDescription):
     css_class = 'complete'
 
     def msg(self):
-        return _('transition_label_resolve', 'Resolved by ${user}',
+        return _('transition_label_resolve', u'Resolved by ${user}',
                  mapping=self._msg_mapping)
 
 ResponseDescription.add_description(Resolve)
@@ -97,7 +97,7 @@ class Close(ResponseDescription):
     css_class = 'close'
 
     def msg(self):
-        return _('transition_label_close', 'Closed by ${user}',
+        return _('transition_label_close', u'Closed by ${user}',
                  mapping=self._msg_mapping)
 
 ResponseDescription.add_description(Close)
@@ -108,7 +108,7 @@ class Cancel(ResponseDescription):
     css_class = 'cancelled'
 
     def msg(self):
-        return _('transition_label_cancel', 'Cancelled by ${user}',
+        return _('transition_label_cancel', u'Cancelled by ${user}',
                  mapping=self._msg_mapping)
 
 ResponseDescription.add_description(Cancel)
@@ -121,7 +121,7 @@ class Accept(ResponseDescription):
     css_class = 'accept'
 
     def msg(self):
-        return _('transition_label_accept', 'Accepted by ${user}',
+        return _('transition_label_accept', u'Accepted by ${user}',
                  mapping=self._msg_mapping)
 
 ResponseDescription.add_description(Accept)
@@ -132,7 +132,7 @@ class Reopen(ResponseDescription):
     css_class = 'reopen'
 
     def msg(self):
-        return _('transition_label_reopen', 'Reopened by ${user}',
+        return _('transition_label_reopen', u'Reopened by ${user}',
                  mapping=self._msg_mapping)
 
 ResponseDescription.add_description(Reopen)
@@ -144,7 +144,7 @@ class Revise(ResponseDescription):
     css_class = 'revise'
 
     def msg(self):
-        return _('transition_label_revise', 'Revised by ${user}',
+        return _('transition_label_revise', u'Revised by ${user}',
                  mapping=self._msg_mapping)
 
 ResponseDescription.add_description(Revise)
@@ -160,9 +160,9 @@ class Reassign(ResponseDescription):
         change = self.response.get_change('responsible')
         responsible_new = Actor.lookup(change.get('after')).get_link()
         responsible_old = Actor.lookup(change.get('before')).get_link()
-
         return _('transition_label_reassign',
-                 'Reassigned from ${responsible_old} to ${responsible_new} by ${user}',
+                 u'Reassigned from ${responsible_old} to '
+                 u'${responsible_new} by ${user}',
                  mapping={'user': self.response.creator_link(),
                           'responsible_new': responsible_new,
                           'responsible_old': responsible_old})
@@ -175,16 +175,19 @@ class ModifyDeadline(ResponseDescription):
     transition = 'task-transition-modify-deadline'
     css_class = 'modifyDeadline'
 
+    def _format_date(self, date):
+        return date.strftime('%d.%m.%Y').decode('utf-8')
+
     def msg(self):
         change = self.response.get_change('deadline')
         new_deadline = change.get('after')
         old_deadline = change.get('before')
         return _('transition_label_modify_deadline',
-                 'Deadline modified from ${deadline_old} to ${deadline_new} '
-                 'by ${user}',
+                 u'Deadline modified from ${deadline_old} to ${deadline_new} '
+                 u'by ${user}',
                  mapping={'user': self.response.creator_link(),
-                          'deadline_old': old_deadline.strftime('%d.%m.%Y'),
-                          'deadline_new': new_deadline.strftime('%d.%m.%Y')})
+                          'deadline_old': self._format_date(old_deadline),
+                          'deadline_new': self._format_date(new_deadline)})
 
 ResponseDescription.add_description(ModifyDeadline)
 
@@ -198,7 +201,7 @@ class Delegate(ResponseDescription):
     css_class = 'delegate'
 
     def msg(self):
-        return ''
+        return u''
 
 ResponseDescription.add_description(Delegate)
 
@@ -209,7 +212,7 @@ class Refuse(ResponseDescription):
     css_class = 'refuse'
 
     def msg(self):
-        return _('transition_label_refuse', 'Refused by ${user}',
+        return _('transition_label_refuse', u'Refused by ${user}',
                  mapping=self._msg_mapping)
 
 ResponseDescription.add_description(Refuse)
@@ -224,7 +227,7 @@ class AssignToDossier(ResponseDescription):
 
         successor = self.response.get_succesor()
         return _('transition_label_assign_to_dossier',
-                 'Assigned to dossier by ${user} successor=${successor}',
+                 u'Assigned to dossier by ${user} successor=${successor}',
                  mapping={'user': self.response.creator_link(),
                           'successor': successor.get_link()})
 
@@ -239,10 +242,11 @@ class SubTaskAdded(ResponseDescription):
     def msg(self):
         docs, subtasks = self.response.get_added_objects()
 
-        label = ' '.join(
+        label = u' '.join(
             [task.get_sql_object().get_link() for task in subtasks])
 
-        return _('transition_add_subtask', 'Subtask ${task} added by ${user}',
+        return _('transition_add_subtask',
+                 u'Subtask ${task} added by ${user}',
                  mapping={'user': self.response.creator_link(),
                           'task': label})
 
@@ -256,9 +260,10 @@ class DocumentAdded(ResponseDescription):
 
     def msg(self):
         docs, subtasks = self.response.get_added_objects()
-        label = ' '.join([doc.Title() for doc in docs])
+        label = u' '.join([doc.title for doc in docs])
 
-        return _('transition_add_document', 'Document ${doc} added by ${user}',
+        return _('transition_add_document',
+                 u'Document ${doc} added by ${user}',
                  mapping={'user': self.response.creator_link(),
                           'doc': label})
 
